fix post and selected post's inconsistent width if post is too short

--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,8 @@ body {
 
 /* Stream page */
 .post-list {
+  width: 100%;
   max-width: 470pt;
-  min-width: 340pt;
   margin: auto;
 }
 .list {
